--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   font-weight: 400;
   --primary-color:#e50914 ;
   --primary-bg-color:#000000;
+  --main-color:#ffffff;
+  --main-2:#8c8c8c;
+  --main-3:#757575;
+  --main-4:#999999;
   --default-font:"Signika",sans-serif;
  /*
   color: rgba(255, 255, 255, 0.87);
@@ -16,15 +20,20 @@
   */
   
 }
+
 body{
   background-color: var(--primary-color);
   font-family: var(--default-font);
+  color: white;
 }
 .home-page{
   background-color: var(--primary-bg-color);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+}
+p{
+  margin-left: 5%;
 }
 .primary{
   display: flex;
@@ -34,27 +43,77 @@ body{
 }
 .primary-ones{
   width:30vw;
-  height: 15vh;
+  height: 30vh;
   color: white;
   margin-bottom: 2rem;
 }
 .red-one{
   background-color: var(--primary-color);
   width:30vw;
-  height: 15vh;
+  height: 30vh;
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 .black-one{
   width:30vw;
-  height: 15vh;
+  height: 30vh;
   border:solid white 1px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
-/*
+.typho-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.typho{
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  margin-left: 10%;
+  padding: 0;
+}
+.typ-head{
+  display: flex;
+  margin-left: 10%;
+}
+.typho-colors{
+  width: 10vw;
+  height: 14vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  color: #000000;
+}
+.main-w{
+  background-color: var(--main-color);
+  color: black;
+}
+.main{
+  background-color: var(--primary-color);
+  color: white;
+  display: flex;
+
+justify-content: center;
+  margin-left: 1vw;
+  padding: 0;
+  align-self: flex-start;
+  width: 40%;
+ 
+}
+.main-g1{
+background-color: var(--main-2);
+}
+.main-g2{
+  background-color: var(--main-3);
+}
+.main-g3
+{
+  background-color: var(--main-4);
+}
+  /*
 a {
   font-weight: 500;
   color: #646cff;
