Some adjustments in .css and creating typhography.html

--- a/style.css
+++ b/style.css
@@ -27,6 +27,27 @@
 /*{
   border:purple 1px solid;
 }*/
+.app-index{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.app-index button{
+  background-color: var(--primary-bg-color);
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  margin: 1vw;
+  padding: 1rem;
+  align-self: flex-start;
+  width: 30%;
+}
+.app-index a{
+  color: white;
+  text-decoration: none;
+  font-family: var(--default-font);
+  font-size: 2rem;
+}
 body{
   background-color: var(--primary-color);
   font-family: var(--default-font);
@@ -45,7 +66,7 @@ p{
 .primary{
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
   margin: 3vw 0;
 }
 .primary-ones{
@@ -53,6 +74,7 @@ p{
   height: 30vh;
   color: white;
   margin-bottom: 2rem;
+  margin-left: 10%;
 }
 .red-one{
   background-color: var(--primary-color);
@@ -73,7 +95,6 @@ p{
 .typho-section{
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
 }
 .typho{
   display: flex;
@@ -81,18 +102,18 @@ p{
   margin: 0;
   margin-left: 10%;
   padding: 0;
-  width: 50%;
+  
 }
 .typ-head{
-  display: flex;
+  display: block;
   margin-left: 10%;
 }
 .typho-colors{
-  width: 10vw;
-  height: 14vh;
+  width: 10rem;
+  height: 10rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
   color: #000000;
 }
 .main-w{
@@ -104,20 +125,25 @@ p{
   color: white;
   display: flex;
   justify-content: center;
-  margin-left: 1vw;
+  margin-left: .7rem;
+  margin-top: .7rem;
   padding: 0;
-  align-self: flex-start;
   width: 40%;
+  flex-wrap: wrap;
+  justify-self: flex-start;
 }
-.main-g1{
+.main-g1{  
 background-color: var(--main-2);
+justify-content: flex-end;
 }
 .main-g2{
   background-color: var(--main-3);
+  justify-content: flex-end;
 }
 .main-g3
 {
   background-color: var(--main-4);
+  justify-content: flex-end;
 }
 
 .accent-blue{
@@ -161,7 +187,7 @@ margin-right: 2vw;
   background-color: var(--color-lightB);
   color: white;
   margin-right: 2vw;
-  border:solid purple 1px;
+  
 }
 
   /*
