--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+
   --primary-color:#e50914 ;
   --primary-bg-color:#000000;
   --main-color:#ffffff;
@@ -24,9 +23,12 @@
   */
   
 }
-/*{
+*{
   border:purple 1px solid;
-}*/
+}
+p{
+  margin-left: 5%;
+}
 .app-index{
   display: flex;
   flex-direction: column;
@@ -52,89 +54,65 @@ body{
   background-color: var(--primary-color);
   font-family: var(--default-font);
   color: white;
+  font-size: 26px;
 }
 .home-page{
   background-color: var(--primary-bg-color);
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  padding-bottom: 5vw;
-}
-p{
-  margin-left: 5%;
+  padding: 5rem;
+  margin: 1rem;
 }
 .primary{
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  margin: 3vw 0;
 }
 .primary-ones{
+  color: white;
   width:30vw;
   height: 30vh;
-  color: white;
-  margin-bottom: 2rem;
-  margin-left: 10%;
+  display: flex;
+  align-items: center;
 }
 .red-one{
   background-color: var(--primary-color);
-  width:30vw;
-  height: 30vh;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+}
+.primary-black{
+  margin-left: 10vw;
 }
 .black-one{
-  width:30vw;
-  height: 30vh;
   border:solid white 1px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
 }
-.typho-section{
-  display: flex;
-  flex-direction: column;
-}
+
 .typho{
   display: flex;
   flex-direction: row;
-  margin: 0;
-  margin-left: 10%;
-  padding: 0;
-  
+  border-radius: 5px;
 }
-.typ-head{
-  display: block;
-  margin-left: 10%;
-}
-.typho-colors{
+.squares{
   width: 10rem;
   height: 10rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   color: #000000;
-}
-.main-w{
-  background-color: var(--main-color);
-  color: black;
+  justify-content: flex-end;
 }
 .main{
   background-color: var(--primary-color);
   color: white;
   display: flex;
   justify-content: center;
-  margin-left: .7rem;
-  margin-top: .7rem;
-  padding: 0;
-  width: 40%;
-  flex-wrap: wrap;
-  justify-self: flex-start;
+  margin-bottom: -.3rem;
+  width: 5rem;
+  align-items: center;
+}
+.main-w{
+  background-color: var(--main-color);
+  color: black;
 }
 .main-g1{  
 background-color: var(--main-2);
-justify-content: flex-end;
+
 }
 .main-g2{
   background-color: var(--main-3);
@@ -174,8 +152,8 @@ margin-right: 2vw;
   color:var(--accent-Green)
 }
 .back-Black{
-  background-color: var(--primary-bg-color);
-  color: white;
+  background-color: white;
+  color: var(--primary-bg-color);
 }
 .accent-Black{
   background-color: var(--primary-bg-color);
@@ -189,6 +167,33 @@ margin-right: 2vw;
   margin-right: 2vw;
   
 }
+.types{
+  display: flex;
+  flex-direction: row;
+  text-align: left;
+  justify-content: flex-start;
+}
+ul{
+  padding: 0 6% ;
+}
+.lightBlack{
+  background-color: var(--color-lightB);
+}
+.type-styles{
+  justify-content: flex-end;
+  align-items: center;
+}
+.first-ones{
+  margin:0 ;
+  padding: 0;
+}
+h1{
+  font-weight: bold;
+  font-size: 50px 3rem;
+  line-height: 1.1;
+  letter-spacing: -0.5%;
+}
+
 
   /*
 a {
