--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   --accent-Green:#5FA53F;
   --color-lightB:#222222;
   --default-font:"Signika",sans-serif;
+  --secondary-button-color:#FFFFFF4D;
  /*
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -60,6 +61,7 @@ body{
   background-color: var(--primary-bg-color);
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   padding: 5rem;
   margin: 1rem;
 }
@@ -193,8 +195,36 @@ h1{
   line-height: 1.1;
   letter-spacing: -0.5%;
 }
-
-
+.buttons-page{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+button{
+  border:none;
+  font-size: 1.2rem;
+  letter-spacing: 0.1%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: .7rem 1.5rem;
+  margin: 1rem;
+  border-radius: .2rem;
+  gap: 1rem;
+}
+.secondary-button{
+  background-color:var(--secondary-button-color);
+  color: white;
+}
+.other-button{
+  border: 1px solid var(--secondary-button-color);
+  border-radius: 0;
+  background-color: var(--primary-bg-color);
+  color: var(--secondary-button-color);
+}
+button:hover{
+  opacity: 0.5;
+}
   /*
 a {
   font-weight: 500;
