--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
   --color-lightB:#222222;
   --default-font:"Signika",sans-serif;
   --secondary-button-color:#FFFFFF4D;
+  
  /*
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -90,6 +91,7 @@ body{
   display: flex;
   flex-direction: row;
   border-radius: 5px;
+  align-items: stretch;
 }
 .squares{
   width: 10rem;
@@ -283,12 +285,27 @@ button{
 .other-button{
   border: 1px solid var(--secondary-button-color);
   border-radius: 0;
-  background-color: var(--primary-bg-color);
+  background-color: rgba(255, 255, 255, 0);
   color: var(--secondary-button-color);
 }
 button:hover{
   opacity: 0.5;
 }
+.who-page{
+  background-color: var(--color-lightB);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 90vh;
+}
+.watchers-background{
+  padding: .5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
   /*
 a {
   font-weight: 500;
