--- a/style.css
+++ b/style.css
@@ -278,6 +278,11 @@ button{
   line-height: auto;
   letter-spacing: 0%;
 }
+.text-field{
+  font-size: 16px;
+  line-height: auto;
+  letter-spacing: 0%;
+}
 .secondary-button{
   background-color:var(--secondary-button-color);
   color: white;
@@ -305,6 +310,37 @@ button:hover{
   flex-direction: column;
   align-items: center;
 }
+.movie-card{
+ background-color: var(--color-lightB);
+  width: 100%;
+  height: 50%;
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ margin: 1rem;
+ padding: 0;
+}
+.nf-logo{
+  width: 5%;
+  height: 15%;
+  margin: 1rem;
+}
+.recently{
+  text-align: center;
+  align-content: center;
+  background-color: var(--primary-color);
+  align-self: flex-end;
+  justify-self: center;
+  margin: 0;
+  padding: 1%;
+}
+.top-ten{
+  width: 10%;
+  height: 20%;
+  margin: 0;
+  padding: 0;
+}
+
 
   /*
 a {
