--- a/style.css
+++ b/style.css
@@ -311,35 +311,68 @@ button:hover{
   align-items: center;
 }
 .movie-card{
- background-color: var(--color-lightB);
-  width: 100%;
-  height: 50%;
+  background-color: var(--color-lightB);
+  min-width: 35%;
+  aspect-ratio: 16/9;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+ margin: 1rem;
+ padding: 0;
+}
+.movie-card-in{
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ min-height: 85%;
+}
+.nf-logo{
+ max-width: 5%;
+  max-height: 15%;
+  margin: 1rem;
+}
+.top-ten{
+  max-width: 15%;
+  max-height: 25%;
+  margin: 0;
+  padding: 0;
+}
+.recently{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+.recently-in{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  background-color: var(--primary-color);
+  margin: 0;
+  padding: 1%;
+  width: 7vw;
+}
+.number-card{
+  background-color: var(--primary-bg-color);
+  min-width: 35%;
+  aspect-ratio: 16/9;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 1rem;
  padding: 0;
 }
-.nf-logo{
-  width: 5%;
-  height: 15%;
-  margin: 1rem;
+.number-card-in{
+  width: 50%;
+  font-family: var(--default-font);
+  font-size: 300px;
+  font-weight: bold;
+  color: var(--primary-bg-color);
+  -webkit-text-stroke: 1rem var(--color-lightB);
+  display: flex;
+  justify-content: flex-end;
+  
 }
-.recently{
-  text-align: center;
-  align-content: center;
-  background-color: var(--primary-color);
-  align-self: flex-end;
-  justify-self: center;
-  margin: 0;
-  padding: 1%;
-}
-.top-ten{
-  width: 10%;
-  height: 20%;
-  margin: 0;
-  padding: 0;
-}
+
 
 
   /*
