Reelflix-index added, header and highlighted sections adjusted

--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@
   */
   
 }
-/*{
+*{
   border:purple 1px solid;
-}*/
+}*
 .app-index{
   display: flex;
   flex-direction: column;
@@ -310,14 +310,19 @@ button:hover{
   flex-direction: column;
   align-items: center;
 }
+.cards-page{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .movie-card{
   background-color: var(--color-lightB);
-  min-width: 35%;
+  min-width: 45%;
   aspect-ratio: 16/9;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
- margin: 1rem;
+ margin: 0;
  padding: 0;
 }
 .movie-card-in{
@@ -325,6 +330,7 @@ button:hover{
  flex-direction: row;
  justify-content: space-between;
  min-height: 85%;
+ 
 }
 .nf-logo{
  max-width: 5%;
@@ -342,18 +348,19 @@ button:hover{
   align-content: center;
   justify-content: center;
 }
-.recently-in{
+.recently p{
   display: flex;
   text-align: center;
   justify-content: center;
   background-color: var(--primary-color);
   margin: 0;
   padding: 1%;
-  width: 7vw;
+  width: 10rem;
+  font-size: 1.1rem;
 }
 .number-card{
   background-color: var(--primary-bg-color);
-  min-width: 35%;
+  min-width: 45%;
   aspect-ratio: 16/9;
  display: flex;
  flex-direction: row;
@@ -364,16 +371,66 @@ button:hover{
 .number-card-in{
   width: 50%;
   font-family: var(--default-font);
-  font-size: 300px;
+  font-size: 10rem;
   font-weight: bold;
   color: var(--primary-bg-color);
-  -webkit-text-stroke: 1rem var(--color-lightB);
+  -webkit-text-stroke: 10px var(--color-lightB);
   display: flex;
   justify-content: flex-end;
+  align-items: center;
+
+}
+.number-card .recently p{
+  width: 6rem;
+  font-size: .6rem;
+}
+.nf-background-color{
+  background-color: var(--primary-bg-color);
+}
+.nomargin{
+  margin: 0;
+}
+.nopadding{
+  padding:0;
+}
+.align-start{
+  display: flex;
+  justify-content: flex-start;
+}
+.align-end{
+  display: flex;
+  justify-content: flex-end;
+}
+.justifycontent-spacebetween{
+  display: flex;
+  justify-content: space-between;
+}
+.alignitems-center{
+  display: flex;
+}
+.header{
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
   
 }
-
-
+.allpageleftpadding{
+  padding-left:  5%;
+}
+.header a{
+  text-decoration: none;
+  font-size: 50%;
+  color: var(--main-color);
+  margin: 0 0.5rem;
+}
+.nostretch{
+  object-fit: none;
+}
+.highlights-div{
+  width:570px;
+  padding: 0;
+  margin: 5rem 0;
+}
 
   /*
 a {
